# unix-dev

./: .gitignore
01_TerminalProject/: Makefile  Show.c
02_Multifile/: .gitignore  Makefile  fun.c  outlib.h  prog.c
02_Multifile/scripts/: test.sh
02_Multifile/src/: prog.c
03_Text/: randomize.sh
04_Debugging/: .gitignore  Makefile  gdb_script1.gdb  gdb_script2.gdb  range.c  reference_output1.txt  reference_output2.txt
05_Regexps/: Makefile  esub  esub.c
06_Tracing/: Makefile  move.c  protect_unlink.c  test.sh
07_Environmental/: CMakeLists.txt
07_Environmental/src/: rhasher.c
07_Environmental/tests/: run_test.sh
lec2/: CMakeLists.txt
lec2/.cache/clangd/index/: main.c.9236D2534F648E41.idx
lec2/src/: main.c
